# workspace

./: .gitignore  CMakeLists.txt  do_pack.sh  option.cmake  workspace.sln
cv/: cv.sln  cv.vcxproj  cv.vcxproj.filters
cv/include/: learnopencv.h
cv/src/: learnopencv_chapter10.cpp  learnopencv_chapter2.cpp  learnopencv_chapter5.cpp  main.cpp
cv/test/: main.cpp
debug/: debug.vcxproj  debug.vcxproj.filters
debug/allocator/: defalloc.h
debug/memory/: test_allocator.cpp  test_cookie.cpp  test_embedded_pointer.cpp  test_malloc.cpp  test_memory.cpp  test_new_handler.cpp  test_operator.cpp  test_perclass.cpp  test_perclass2.cpp  test_vc6_memory.cpp
debug/stl/: test_alias_template.cpp  test_auto.cpp  test_bind.cpp  test_default.cpp  test_initializer_list.cpp  test_istream_iterator.cpp  test_iterator_category.cpp  test_lambdas.cpp  test_nullptr.cpp  test_ostream_iterator.cpp  test_rvalue_references.cpp  test_variadic_template.cpp  testh_hash.cpp
debug/test/: allocator_test.cpp  allocator_test.h  main.cpp  memory_test.h  stl_test.h
doc/C++/: C++.xmind
doc/分布式/: 分布式.xmind
doc/数学基础/: 数学基础.xmind
doc/读书笔记/: 红楼梦.xmind
doc/音视频开发/: 1. avformat_open_input.md  音视频开发.xmind
ffmpeg/: ffmpeg.vcxproj  ffmpeg.vcxproj.filters
ffmpeg/include/: player.h  simple_ffmpeg.h
ffmpeg/src/: main.cpp  simple_video_player.cpp  simple_video_player2.cpp  transcoding.cpp
python/: brandcompare.py
rtsp/: CMakeLists.txt
rtsp/include/: rtspclient.h  rtspurl.h
rtsp/src/: CMakeLists.txt  main.cpp  rtspclient.cpp  rtspurl.cpp
shell/: cpuinfo.sh  do_pack.sh  meminfo.sh
test/: CMakeLists.txt
test/include/: test.h
test/src/: CMakeLists.txt  cputest.cpp  kfifotest.cpp  logtest.cpp  main.cpp  shelltest.cpp  uuidtest.cpp
uml/设计模式/: GoF.mdj
utils/: CMakeLists.txt  utils.cmake
utils/include/: common.h  cond.h  cpu.h  fileutil.h  fileutils.h  guard.h  host.h  kfifobuffer.h  log.h  meminfo.h  mutex.h  noncopyable.h  runnable.h  shell.h  singleton.h  stringutil.h  stringutils.h  thread.h  utilbase.h  uuid.h
utils/include/base/: condbase.h  mutexbase.h  shellbase.h  shellhandler.h  threadbase.h
utils/include/unix/: condunix.h  mutex_unix.h  mutexunix.h  shellunix.h  threadunix.h
utils/src/: CMakeLists.txt  cond.cpp  cpu.cpp  fileutil.cpp  fileutils.cpp  guard.cpp  host.cpp  kfifobuffer.cpp  log.cpp  mutex.cpp  shell.cpp  stringutil.cpp  stringutils.cpp  thread.cpp  uuid.cpp
utils/src/base/: shellbase.cpp  shellhandler.cpp
utils/src/unix/: condunix.cpp  mutex_unix.cpp  mutexunix.cpp  shellunix.cpp  threadunix.cpp
webrtc/: index.html
webrtc/html/: example-01.html  example-02.html  example-03.html
webrtc/js/: example-01.js  example-03.js
