#CMake最低版本号要求
CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(workspace)

# 设置编译选项
INCLUDE(option.cmake)

# 设置三方库路径
IF (CMAKE_SYSTEM_NAME MATCHES "Linux")
    MESSAGE(STATUS "Current platform: Linux ")
    SET(THIRD_LIBRARY_PATH ${PROJECT_SOURCE_DIR}/3rdparty/linux)
ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Windows")
    MESSAGE(STATUS "Current platform: Windows ")
    SET(THIRD_LIBRARY_PATH ${PROJECT_SOURCE_DIR}/3rdparty/linux)
ELSEIF (CMAKE_SYSTEM_NAME MATCHES "FreeBSD")
    MESSAGE(STATUS "Current platform: FreeBSD ")
    SET(THIRD_LIBRARY_PATH ${PROJECT_SOURCE_DIR}/3rdparty/linux)
ELSE ()
MESSAGE(STATUS "other platform: ${CMAKE_SYSTEM_NAME}")
    SET(THIRD_LIBRARY_PATH ${PROJECT_SOURCE_DIR}/3rdparty/linux)
ENDIF (CMAKE_SYSTEM_NAME MATCHES "Linux")

# set default output path
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/lib")
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/arch")

IF (BUILD_LEETCODE)
    MESSAGE(STATUS "Compile: leetcode")
    ADD_SUBDIRECTORY(leetcode)
ENDIF()